# advent-of-code-2025

./: .gitattributes  .gitignore  README.md  aoc2025.cabal
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
app/: Day01.hs  Day01Part2.hs  RunDay01.hs  RunDay01Part2.hs  RunDay02.hs  RunDay02Part2.hs  RunDay03.hs  RunDay03Part2.hs  RunDay04.hs  RunDay04Part2.hs  RunDay05.hs  RunDay05Part2.hs  RunDay06.hs  RunDay06Part2.hs
inputs/: day01.txt  day02.txt  day03.txt  day04.txt  day05.txt  day06.txt
src/: AOC2025.hs  Day01.hs  Day01Part2.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs
test/: Day01Spec.hs  Day02Spec.hs  Day03Spec.hs  Day04Spec.hs  Day05Spec.hs  Day06Spec.hs  Day1Spec.hs  Repro.hs  Spec.hs
