cabal-version:       2.2

name:                aoc2025
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/aoc2025#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  hs-source-dirs: src
  exposed-modules: AOC2025, Day01Part2
  build-depends: base >= 4.7 && < 5
  default-language: Haskell2010

executable day01
  main-is: Day01.hs
  hs-source-dirs: app
  build-depends: base, aoc2025
  default-language: Haskell2010

executable day01part2
  main-is: RunDay01Part2.hs
  hs-source-dirs: app
  build-depends: base, aoc2025
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/aoc2025

test-suite aoc2025-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
    Day01Spec
  build-depends:
      base >= 4.7 && < 5,
      aoc2025,
      hspec,
      hspec-discover
  default-language: Haskell2010
