cabal-version:       2.2

name:                aoc2025
version:             0.1.0.0
build-type:          Simple

library
  hs-source-dirs: src
  exposed-modules: Day01, Day02, Day03, Day04, Day05
  build-depends: base >= 4.7 && < 5, containers
  default-language: Haskell2010

executable day01
  main-is: RunDay01.hs
  hs-source-dirs: app
  build-depends: base, aoc2025
  default-language: Haskell2010

executable day01part2
  main-is: RunDay01Part2.hs
  hs-source-dirs: app
  build-depends: base, aoc2025
  default-language: Haskell2010

executable day02
  main-is: RunDay02.hs
  hs-source-dirs: app
  build-depends: base, aoc2025
  default-language: Haskell2010

executable day02part2
  main-is: RunDay02Part2.hs
  hs-source-dirs: app
  build-depends: base, aoc2025
  default-language: Haskell2010

executable day03
  main-is: RunDay03.hs
  hs-source-dirs: app
  build-depends: base, aoc2025
  default-language: Haskell2010

executable day03part2
  main-is: RunDay03Part2.hs
  hs-source-dirs: app
  build-depends: base, aoc2025
  default-language: Haskell2010

executable day04
  main-is: RunDay04.hs
  hs-source-dirs: app
  build-depends: base, aoc2025
  default-language: Haskell2010

executable day04part2
  main-is: RunDay04Part2.hs
  hs-source-dirs: app
  build-depends: base, aoc2025
  default-language: Haskell2010

executable day05
  main-is: RunDay05.hs
  hs-source-dirs: app
  build-depends: base, aoc2025
  default-language: Haskell2010

executable day05part2
  main-is: RunDay05Part2.hs
  hs-source-dirs: app
  build-depends: base, aoc2025
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/aoc2025

test-suite aoc2025-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
    Day01Spec,
    Day02Spec,
    Day03Spec,
    Day04Spec,
    Day05Spec
  build-depends:
      base >= 4.7 && < 5,
      aoc2025,
      hspec,
      hspec-discover
  default-language: Haskell2010
